# vitapi

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE  NEWS  README
doc/man/: vitapi-faq.5  vitapi.3
examples/: .gitignore  CMakeLists.txt  chessboard.cpp  drag.cpp  keys.cpp  ninemensmorris  ninemensmorris.cpp  rectangles.cpp  speed.cpp  test_pattern.cpp
src/: CMakeLists.txt  Caps.cpp  Caps.h  Color.cpp  Color.h  check.h  color.cpp  error.cpp  iapi.cpp  iapi.h  install  tapi.cpp  text.cpp  text.h  util.cpp  util.h  vapi.cpp  vapi.h  vitapi.h
test/: .gitignore  CMakeLists.txt  caps.t.cpp  color.t.cpp  error.t.cpp  run_all  tapi.t.cpp  test.cpp  test.h
util/: .gitignore  CMakeLists.txt  README  color.c  termdef.c
util/results/: kterm  mlterm  roxterm  rxvt-unicode  wterm
