include_directories (${CMAKE_SOURCE_DIR}/src) 
add_executable (drag drag.cpp)
target_link_libraries(drag libvitapi)
add_executable (keys keys.cpp)
target_link_libraries(keys libvitapi)
add_executable (rectangles rectangles.cpp)
target_link_libraries(rectangles libvitapi)
add_executable (speed speed.cpp)
target_link_libraries(speed libvitapi)
