include_directories (${CMAKE_SOURCE_DIR}/src) 
add_executable (drag drag.cpp)
target_link_libraries(drag vitapi)
add_executable (keys keys.cpp)
target_link_libraries(keys vitapi)
add_executable (rectangles rectangles.cpp)
target_link_libraries(rectangles vitapi)
add_executable (speed speed.cpp)
target_link_libraries(speed vitapi)
add_executable (chessboard chessboard.cpp)
target_link_libraries(chessboard vitapi)
